# prvnz-edge

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/prvnz-edge-cli/: Cargo.toml
crates/prvnz-edge-cli/src/: main.rs
crates/prvnz-edge-core/: Cargo.toml
crates/prvnz-edge-core/src/: config.rs  disclosure.rs  lib.rs  policy.rs  schema.rs  trigger.rs
