# SPDX-License-Identifier: Apache-2.0

[package]
name = "prvnz-edge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Pi-class PRVNZ DPP participation runtime — composes Minima + Tenzro"

[dependencies]
# Tier 1 contract.
furcate-inference-core.workspace = true

# Tier 2 siblings — composed, never reimplemented.
minima-attest.workspace = true
tenzro-edge-core.workspace = true

# Async + streams (TriggerSource yields a Stream).
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
tokio.workspace = true

# Serde + standards primitives.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# Hashing + encoding for SD-JWT disclosure digests + JSON-LD payload digests.
# sha2 is required by the IETF SD-JWT spec for the disclosure-hash algorithm
# (`sha-256` is the SD-JWT default; blake3 is what the rest of Furcate uses
# for receipt content addressing).
blake3.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true

# notify drives DppLifecycleTrigger's file-watch backend. Other TriggerSource
# backends (MQTT, HTTP poll) land as sibling structs in trigger.rs later.
notify.workspace = true

[lints]
workspace = true
